@@ -20,6 +20,57 @@
 
 const char* FILE_NAME = "Sys/IO.c";
 
+int32_t SPVM__Sys__IO__INIT_STDIN(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t e = 0;
+  
+  FILE* stream = stdin;
+  
+  int32_t pointer_fields_length = 1;
+  void* obj_stream = env->new_pointer_with_fields_by_name(env, stack, "Sys::IO::FileStream", stream, pointer_fields_length, &e, FILE_NAME, __LINE__);
+  if (e) { return e; }
+  
+  env->set_pointer_no_need_free(env, stack, obj_stream, 1);
+  
+  stack[0].oval = obj_stream;
+  
+  return 0;
+}
+
+int32_t SPVM__Sys__IO__INIT_STDOUT(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t e = 0;
+  
+  FILE* stream = stdout;
+  
+  int32_t pointer_fields_length = 1;
+  void* obj_stream = env->new_pointer_with_fields_by_name(env, stack, "Sys::IO::FileStream", stream, pointer_fields_length, &e, FILE_NAME, __LINE__);
+  if (e) { return e; }
+  
+  env->set_pointer_no_need_free(env, stack, obj_stream, 1);
+  
+  stack[0].oval = obj_stream;
+  
+  return 0;
+}
+
+int32_t SPVM__Sys__IO__INIT_STDERR(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t e = 0;
+  
+  FILE* stream = stderr;
+  
+  int32_t pointer_fields_length = 1;
+  void* obj_stream = env->new_pointer_with_fields_by_name(env, stack, "Sys::IO::FileStream", stream, pointer_fields_length, &e, FILE_NAME, __LINE__);
+  if (e) { return e; }
+  
+  env->set_pointer_no_need_free(env, stack, obj_stream, 1);
+  
+  stack[0].oval = obj_stream;
+  
+  return 0;
+}
+
 int32_t SPVM__Sys__IO__open(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t items = env->get_args_stack_length(env, stack);
